<resources>
    <string name="app_name">videoBlogMobileClient</string>

    <!-- Buttons. -->
    <string name="register_btn">Зарегистрироваться</string>
    <string name="login_btn">Войти</string>

    <!-- Edit texts. -->
    <string name="login_et">Введите логин</string>
    <string name="email_et">Электронная почта</string>
    <string name="pas_et">Введите пароль</string>
    <string name="confirm_pas_et">Подтвердите пароль</string>

    <string name="test_wrapper_text">Loading...</string>
    <string name="registration_fragment_title">Registration</string>
    <string name="login_fragment_title">Sign In</string>

    <!-- Validate fields strings. -->
    <string name="required">Required!</string>
    <string name="warn_password_field_length">Minimum 6 character password</string>
    <string name="warn_login_field_length">Minimum 3 character login</string>
    <string name="warn_pas_upper_case">Must contain 1 upper-case character</string>
    <string name="warn_pas_lower_case">Must contain 1 lower-case character</string>
    <string name="warn_pas_spec_char">Must contain 1 special character (@#\$%^&amp;+=_)</string>
    <string name="warn_email">Invalid Email address</string>
    <string name="warn_login_spec_char">Must NOT contain special characters (@#\$%^&amp;+=_)</string>
    <string name="warn_confirm_password_mismatch">Password mismatch</string>

    <string name="news_feed_title">Видеоплёнка</string>
</resources>